# llm-bridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: README.md  anthropic_prompt_caching.py  basic_anthropic.py  basic_chat.py  basic_gemini.py  basic_openai.py  basic_tool.py  demo.py  example.py  openai_reasoning.py  structured_output.py
src/llm_bridge/: __init__.py  _exceptions.py  anthropic_provider.py  chat_types.py  client.py  errors.py  factory.py  gemini_provider.py  llm.py  openai_provider.py  params.py  provider.py  provider_wrappers.py  providers.py  response.py  responses.py  stream_utils.py  types.py
src/llm_bridge/adapters/: __init__.py  anthropic.py  gemini.py  openai.py
src/llm_bridge/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
src/llm_bridge/types/: __init__.py  chat.py  tool.py
tests/: test_chat.py  test_openai_provider.py  test_openai_response.py
